// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video renders the component 1`] = `
<div>
  <video
    controls=""
    data-autoplay="true"
    id="foo"
  />
</div>
`;

exports[`Video renders the component 2`] = `
<div>
  <video
    data-autoplay="false"
    id="foo"
  />
</div>
`;
